--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,6 @@
 cp .gitconfig .git/config
-git config --local core.sshCommand "ssh -i ~/.ssh/id_ed25519_manu4linux"
 #GIT_SSH_COMMAND
+git config --local core.sshCommand "ssh -i ~/.ssh/id_ed25519_manu4linux"
+
+# 2025 year
+# known to be Used from Hyd-london-philly-denver-suwanee
