--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
 cp .gitconfig .git/config
 #GIT_SSH_COMMAND
 git config --local core.sshCommand "ssh -i ~/.ssh/id_ed25519_manu4linux"
+git config --local --type bool push.autoSetupRemote true 
 
 # 2025 year
 # known to be Used from Hyd-london-philly-denver-suwanee
